Adding reset password for the client (not done)
