# server/Application/Models/Dtos/Auth/ResetPasswordDto.cs
@@ -1,0 +1,7 @@
+namespace Application.Models.Dtos.Auth;
+
+public class ResetPasswordDto
+{
+    public string password { get; set; }
+    public string userId { get; set; }
+}
