# server/Application/Models/ErrorMessages.cs
@@ -12,7 +12,8 @@ public enum ErrorCode
     DeletingUserFailed,
     GettingAllUsersFailed,
     InvalidUserData,
-    UserEmailAlreadyExists
+    UserEmailAlreadyExists,
+    ResetPasswordFailed
 }
 
 public static class ErrorMessages
@@ -27,6 +28,7 @@ public static class ErrorMessages
         { ErrorCode.UpdatingUserFailed, "Failed to update the user, please try again later." },
         { ErrorCode.UserNotFound, "User not found, please try again." },
         { ErrorCode.DeletingUserFailed, "Failed to delete the user, please try again later." },
+        { ErrorCode.ResetPasswordFailed, "Failed to reset password for the user, please try again later." },
         { ErrorCode.GettingAllUsersFailed, "Failed to fetching all users, please try again later." },
         { ErrorCode.InvalidUserData, "Invalid user data." },
         { ErrorCode.UserEmailAlreadyExists, "User email already exists." },
